--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ scipy = [
   { version = "^1.6.0", markers = "python_version >= '3.10'" },
   { version = ">=1.6.0,<1.14.0", markers = "python_version < '3.10'" },
 ]
+doclayout-yolo = "0.0.3"
 typer = "^0.12.5"
 python-docx = "^1.1.2"
 python-pptx = "^1.0.2"
